Quick fix for turckloader not showing.

--- a/app/assets/stylesheets/detail.scss
+++ b/app/assets/stylesheets/detail.scss
@@ -39,7 +39,6 @@
     .hiddentext {
       color: #0D357B;
       font-size: 12pt;
-      display: none;
     }
   }
 
@@ -55,7 +54,6 @@
     .hiddentext {
       color: #0D357B;
       font-size: 12pt;
-      display: none;
     }
   }
 }
